git-svn-id: https://darkengines.com/svn/darkengines/DarkEngines.cpp@101 302f0312-3c5d-0d4b-b714-136c201f073e

--- a/trunk/DarkBox/DarkBoxConsole/DarkBoxConsole.vcxproj
+++ b/trunk/DarkBox/DarkBoxConsole/DarkBoxConsole.vcxproj
@@ -40,7 +40,7 @@
     <IncludePath>$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LibraryPath>E:\DarkEngines.cpp\trunk\DarkBox\Debug;$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LibraryPath>$(SolutionDir)\Release;$(LibraryPath)</LibraryPath>
