git-svn-id: https://darkengines.com/svn/darkengines/DarkEngines.cpp@102 302f0312-3c5d-0d4b-b714-136c201f073e

--- a/trunk/DarkBox/DarkBoxConsole/DarkBoxConsole.vcxproj
+++ b/trunk/DarkBox/DarkBoxConsole/DarkBoxConsole.vcxproj
@@ -37,7 +37,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\DarkBoxLib;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>$(SolutionDir)\Debug;$(LibraryPath)</LibraryPath>
