--- a/trunk/DarkBox/DarkBoxLib/DarkBoxLib.vcxproj
+++ b/trunk/DarkBox/DarkBoxLib/DarkBoxLib.vcxproj
@@ -62,9 +62,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Client.h" />
     <ClInclude Include="Listener.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Client.cpp" />
     <ClCompile Include="Listener.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
