git-svn-id: https://darkengines.com/svn/darkengines/DarkEngines.cpp@109 302f0312-3c5d-0d4b-b714-136c201f073e

--- a/trunk/DarkBox/DarkBoxConsole/DarkBoxConsole.vcxproj
+++ b/trunk/DarkBox/DarkBoxConsole/DarkBoxConsole.vcxproj
@@ -72,10 +72,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="DarkClient.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="DarkClient.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="THashTable.h" />
   </ItemGroup>
